food_delivery/my_react_app/src/Components/ExploreMenu/ExploreMenu.css
.explore-menu{
    display: flex;
    flex-direction: column;
    gap: 20px;
}

.explore-menu h1{
    color: #262626;
    font-weight: 500;
}

.explore-menu-text{
    max-width: 60%;
    color:#808080;
}

.explore-menu-list{
    display: flex;
    align-items: center;
    text-align: center;
    gap:30px;
    justify-content: space-between;
    margin: 20px 0px;
    padding: 10px 10px 0px 10px;
    overflow-x: scroll;
    /* &::-webkit-scrollbar{display: none;} */
}

@media(min-width: 1580px){
    .explore-menu-list{
        &::-webkit-scrollbar{display:none;}
    }
}

.explore-list-item img{
    width: 7.5vw;
    min-width: 80px;
    cursor:pointer;
    border-radius: 50%;
    transition: 0.3s;
}

.explore-list-item p{
    margin-top: 10px;
    font-size: 20px;
    color: #747474;
    font-size: max(1.4, 16px);
    cursor: pointer;
}

.explore-menu hr{
    margin: 10px 0px;
    height: 2px;
    background-color: #e2e2e2;
    border: none;
}

.explore-list-item img:hover{
    transform: scale(1.1);
    transition: 0.3s;
}

.explore-menu-list .active{
    border: 4px solid tomato;
    padding:2px;
}

